# minerule

./: .gitignore  .gitignore~  CHANGELOG  CMakeLists.txt  INSTALL.txt  MR.TODO  Makefile  Makefile.mvars  Makefile.vars  Makefile.vars.am  Parsers  README.md  README.mdd  TODO  TODO.NOW  configure  index.html  index.md  install.sh  params.json
Adapters/postgres/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Connection.cpp  Connection.hpp  DatabaseMetaData.cpp  DatabaseMetaData.hpp  Makefile  PreparedStatement.cpp  PreparedStatement.hpp  ResultSet.cpp  ResultSet.hpp  ResultSetMetaData.cpp  ResultSetMetaData.hpp  Statement.cpp  Statement.hpp  TestDatabaseMetaData  TestResultSet  TestResultSetMetaData  TestStatements  cmake_install.cmake  install_manifest.txt  mrpg_lib_main.cpp
Adapters/postgres/cmake/Modules/: FindMinerule.cmake
Adapters/postgres/debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TestDatabaseMetaData  TestResultSet  TestResultSetMetaData  TestStatements  cmake_install.cmake
Adapters/postgres/tests/: TestDatabaseMetaData.cpp  TestResultSet.cpp  TestResultSetMetaData.cpp  TestStatements.cpp
Algorithms/: Algorithms.cpp  (+57 more)
src/: CMakeLists.txt  Makefile
src/Algorithms/: Algorithms.cpp  AlgorithmsOptions.cpp  BFSWithGidsAndCross.cpp  BFSWithGidsNoCross.cpp  Bodymap.cpp  CCSMSequence.cpp  CCSMiner.cpp  CMakeLists.txt  Care.cpp  ConstrItemSetsExtraction.cpp  ConstrTree.cpp  DestrTree.cpp  FPGrowth.cpp  FSMiner.cpp  FSTree.cpp  FSTreeNode.cpp  FSTreeSequence.cpp  IDIncrementalAlgorithm.cpp  IncrAlgoClasses.cpp  IncrementalAlgorithm.cpp  Makefile  MiningAlgorithmBase.cpp  PartitionBase.cpp  PartitionWithClusters.cpp  PrepareDataUtils.cpp  ResultCombinator.cpp  STSMiner.cpp  STSMinerWithBitVector.cpp  STSMinerWithBitVector.cpp.BAK  fpGrowthLauncher.cpp  fpGrowthOrigLauncher.cpp  partitionWithClustersLauncher.cpp  partitionWithoutClusters.cpp  sqlCoreConn.cpp
src/Database/: Connection.cpp  Connection.cpp.BAK  MIndex.cpp  PrepareDataUtils.cpp  QueryResult.cpp  SourceRow.cpp  SourceRowAttribute.cpp  SourceRowAttributeCollection.cpp  SourceRowColumnIds.cpp  SourceRowCommon.cpp  SourceRowDescriptor.cpp  SourceRowElement.cpp  SourceRowMetaInfo.cpp  SourceTable.cpp
src/MRDatabase/: CMakeLists.txt  MIndex.cpp  efftest.cpp  sourcerow.cpp  sourcerowattribute.cpp  sourcerowattributecollection.cpp  sourcerowcommon.cpp  sourcerowdescriptor.cpp  sourcerowelement.cpp
src/Optimizer/: CMakeLists.txt  CatalogueInstaller.cpp  GAQueryCombinator.cpp  OptimizedMinerule.cpp  OptimizerCatalogue.cpp  QueryNormalizer.cpp  QueryResult.cpp
src/Optimizer/Installers/: PostgresCatalogueInstaller.cpp
src/Parsers/: CMakeLists.txt  Makefile  MineruleParser.lpp  MineruleParser.ypp  ParsedMinerule.cpp  ParsedPredicate.cpp  ParserLibrary.cpp  PredicateBase.cpp  SupportMeasure.cpp
src/PreProcessor/: translatedtablestandardsql.cpp  translationmanager.cpp  translationmanagerstandardsql.cpp
src/PredicateUtils/: CMakeLists.txt  ExpressionNFCoder.cpp  HeadBodyPredicatesSeparator.cpp  Interval.cpp  Predicate.cpp  PredicateUtils.cpp  SimplePredAnalyzer.cpp
src/Programs/: MRDefaultOptions.cpp  PrintRules.cpp  RuleFormatter.cpp  RuleFormatter.h  minerule.cpp  mrcatalogue.cpp
src/Programs/MRCatalogue/: ErrorCodes.h  ErrorCodes.hpp  Exception.h  Exception.hpp  MRCUtils.cpp  MRCUtils.h  MRCUtils.hpp  Options.cpp  Options.h  Options.hpp  Printer.cpp  Printer.h  Printer.hpp  mrcatalogue.cpp
src/Programs/MRDefaultOptions/: MRDefaultOptions.cpp
src/Programs/MRMatch/: GidRuleMatcher.h  GidRulesMatcher.cpp  GidRulesMatcher.h  GidRulesMatcher.hpp  Matcher.cpp  Matcher.h  Matcher.hpp  Options.cpp  Options.h  Options.hpp  RuleGidsDBMatcher.cpp  RuleGidsDBMatcher.h  RuleGidsDBMatcher.hpp  RuleGidsMatcher.cpp  RuleGidsMatcher.h  RuleGidsMatcher.hpp  mrmatch.cpp  mrmatch.h  mrmatch.hpp
src/Programs/MRPrintRules/: Options.cpp  Options.h  Options.hpp  PrintRules.cpp  RuleFormatter.cpp  RuleFormatter.h
src/Programs/MRQuery/: mrquery.cpp
src/Programs/Minerule/: minerule.cpp
src/Result/: CMakeLists.txt  QueryResult.cpp  RuleFormatter.cpp  RulesMatcher.cpp
src/Utils/: AlgorithmTypes.cpp  Bitstring.cpp  CMakeLists.txt  Constraints.cpp  FileUtils.cpp  MRLogger.cpp  Makefile  MineruleErrors.cpp  MineruleException.cpp  MineruleLogs.cpp  MineruleOptions.cpp  OptionParser.lpp  OptionParser.ypp  OptionParserLib.cpp  Progress.cpp  SQLUtils.cpp  StringUtils.cpp
src/Utils/MineruleOptions_implementations/miningalgorithms/: itemsetmining.h
src/cmake/Modules/: LIBGAConfig.cmake  LIBODBC++Config.cmake
src/include/minerule/Algorithms/: Algorithms.h  AlgorithmsOptions.h  BFSWithGidsAndCross.h  BFSWithGidsNoCross.h  Bit_vector.h  Bodymap.h  CCSMSequence.h  CCSMiner.h  Care.h  ConstrItemSetsExtraction.h  ConstrTree.h  Counter.h  DestrTree.h  FSMiner.h  FSTree.h  FSTreeSequence.h  IDIncrementalAlgorithm.h  IncrAlgoClasses.h  MiningAlgorithmBase.h  PairEid_vector.h  PartitionBase.h  PrepareDataUtils.h  gidCidList.h  iSet.h  itemSet.h  itemSetCluster.h  itemSetEntry.h  itemSetEntryCluster.h  itemSetHashMap.h  itemSetList.h  itemSetListCluster.h  itemSetOld.h  newItemSetHashMap.h  sqlCoreConn.h  tree.h  treenode.h  utils.h
src/include/minerule/Database/: Connection.h  ItemSetLoader.h  ItemType.h  MIndex.h  PrepareDataUtils.h  QueryResult-header.h  QueryResult-impl.h  QueryResult.h  Rule.h  SetLoader.h  SourceRow.h  SourceRowAttribute.h  SourceRowAttributeCollection.h  SourceRowColumnIds.h  SourceRowDescriptor.h  SourceRowElement.h  SourceRowMetaInfo.h  SourceTable.h  SourceTableRequirements.h  Transaction.h
src/include/minerule/MRDatabase/: MIndex.h  sourcerow.h  sourcerowattributecollection.h  sourcerowelement.h
src/include/minerule/Optimizer/: CatalogueInstaller.h  GAQueryCombinator.h  OptimizedMinerule.h  OptimizerCatalogue.h  QueryNormalizer.h  QueryResult-header.h  QueryResult-impl.h
src/include/minerule/Parsers/: HeaderQuery.h  ParsedMinerule.h  ParserLibrary.h
src/include/minerule/PreProcessor/: translatedtable.h  translatedtablestandardsql.h  translationmanagerstandardsql.h
(+501 files in other folders)
